# SoapyBladeRF

./: .travis.yml  CMakeLists.txt  Changelog.txt  FindLibbladeRF.cmake  README.md  bladeRF_Registation.cpp  bladeRF_Registration.cpp  bladeRF_Settings.cpp  bladeRF_SoapySDR.hpp  bladeRF_Streaming.cpp  self_test.py
.github/patches/: bladerf_msvc.patch
.github/workflows/: ci.yml
debian/: changelog  control  copyright
